2008-04-21  Constantin Loizides <loizides@mit.edu>

	* tag V03-11-01
	* Implemented transfer to t0 with independent daemon (daemon to be written seperately).
	* General cleanup of code

2008-04-17  Harry Cheung <cheung@fnal.gov>

	* tag V03-11-00
	* Include fair share event consumer handling in event server and consumer monitoring

2008-03-10  Harry Cheung <cheung@fnal.gov>

	* tag V03-10-02
	* Changes to throw exception when a write error is encountered

2008-03-10  Emilio Meschi <emilio.meschi@cern.ch>

	* tag V03-10-01 (was tagged V03-09-07 but in Main trunk so deleted)
	* modifications to override stream maxSize from xdaq

2008-03-04  Harry Cheung <cheung@fnal.gov>

	* tag V03-10-00
	* modifications for DQM core services needed in 20X

2008-03-03  Harry Cheung <cheung@fnal.gov>

	* tag V03-09-06 
	* Remove unused variable and printout from the thread monitoring workloop
	* Enable consumers to select an SM stream by the SM streamLabel

2008-02-25  Emilio Meschi <emilio.meschi@cern.ch>

	* tag V03-09-05 
	* added monitoring workloop and related functions
	* added E->F asynchronous transition when failure detected in JobController thread
	* added data structure to hold detailed stream file info 
	* stream info and run number added to web page
	* added findStreamName utility to extract stream name from entry in filelist
	* modified StreamService to use a mutex around access to file list
	* replaced application icons

2008-02-21  Harry Cheung <cheung@fnal.gov>

	* tag V03-09-04 
	* Fixes to allow propor behavior for file sizes greater than 2GB, and to
	  make the cfg file specify the max file size in MBytes instead of bytes.

2008-02-11  Harry Cheung <cheung@fnal.gov>

	* tag V03-09-03 
	* Support for SMProxyServer as a special consumer when we have multiple
	  HLT output modules.

2008-02-02  Harry Cheung <cheung@fnal.gov>

	* tag V03-09-02 
        * New version of SMPerformanceMeterfor thread safety so SMProxyServer can